{{ site.github.url }} added to all links

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@ layout: default
     </div>
     <div class="content-region1-bottom">
         <ul>
-            <li><a href="/pages/services/oil-change.html">Oil Change</a></li>
-            <li><a href="/pages/services/state-vehicle-inspection.html">State Inspection</a></li>
-            <li><a href="/pages/services/other-services.html">Other Services</a></li>
+            <li><a href="{{ site.github.url }}/pages/services/oil-change.html">Oil Change</a></li>
+            <li><a href="{{ site.github.url }}/pages/services/state-vehicle-inspection.html">State Inspection</a></li>
+            <li><a href="{{ site.github.url }}/pages/services/other-services.html">Other Services</a></li>
         </ul>
     </div>
 </div>
 <div class="content-region2">
     <div class="content-region2-left">
-        <img src="images/eagle-lube-bird-small.png" alt="eagle lube bird small">
+        <img src="{{ site.github.url }}images/eagle-lube-bird-small.png" alt="eagle lube bird small">
     </div>
 
     <div class="content-region2-right">
-        <strong>Eagle Lube</strong> is Pleasanton's oil change and auto detailing expert! As a family owned and locally operated business, it is our goal to provide the best oil change & maintenance services in the Tri-city area. <a href="/pages/about-us/awards.html">Click here</a>        to find out about all of the awards we have won.
+        <strong>Eagle Lube</strong> is Pleasanton's oil change and auto detailing expert! As a family owned and locally operated business, it is our goal to provide the best oil change & maintenance services in the Tri-city area. <a href="{{ site.github.url }}/pages/about-us/awards.html">Click here</a>        to find out about all of the awards we have won.
     </div>
 </div>
 
