--- a/pages/about-us/about-us.html
+++ b/pages/about-us/about-us.html
@@ -1,4 +1,27 @@
+--- 
+title: EAGLE LUBE - About Us 
+layout: default 
 ---
-title: EAGLE LUBE - About Us
-layout: default
----
+
+<link rel="stylesheet" href="{{ site.github.url }}/css/about-us.css" type="text/css" />
+
+<div class="about-us-content">
+    <div class="about-us-top-content-container">
+        <div class="about-us-topleft-content">
+            <img src="/images/horiz-eagle-lube-store.jpg" alt="Picture of the store front with a sunset in the background." />
+        </div>
+        <div class="about-us-topright-content">
+            <div>
+            <h2>Why Eagle Lube?</h2>
+            People choose Eagle Lube Oil Change for lots of reasons. They get quality maintenance services. They get a fair price. And they like the way they are treated. Here are five good reasons you should choose Eagle Lube, too.
+            <ul>
+                <li>Drive thru oil changes in about 15 minutes</li>
+                <li>Friendly, certified technicians</li>
+                <li>Recommended maintenance services to help you avoid costly breakdowns and maintain performance - often at 20% to 50% lower cost than dealerships</li>
+                <li>A Convenient location in your neighborhood - No need to drive to San Antonio to get a quality oil change!</li>
+                <li>Customer rated at 4.6 out of 5 stars</li>
+            </ul>
+            </div>
+        </div>
+    </div>
+</div>
