--- a/pages/services/oil-change.html
+++ b/pages/services/oil-change.html
@@ -3,22 +3,26 @@ title: EAGLE LUBE - Oil Changes
 layout: default
 ---
 
-<link rel="stylesheet" href="{{ site.github.url }}/css/oil-change.css" type="text/css" />
+<link rel="stylesheet" href="{{ site.github.url }}/css/services.css" type="text/css" />
 
-<div class="oilchange-content">
-    <div class="oilchange-top-content-container">
-        <div class="oilchange-topleft-content">
+<div class="services-content">
+    <div class="services-top-content-container">
+        <div class="services-topleft-content">
             <img src="/images/oilchange.jpg" alt="picture of a oil change" />
         </div>
-        <div class="oilchange-topright-content">
-            
+        <div class="services-topright-content">
+            <h2>Oil Changes at Eagle Lube</h2>
+           At Eagle Lube, we provide more than just an oil change. Our premium service oil change is a comprehensive preventive maintenance insepction that helps maintain the performance and health of your car. In order to properly maintain your vehicle, Eagle Lube suggests an oil change and preventive maintenance insepction every 3,000 miles, or 3 months, whichever comes first. We use a synthetic blend motor oil at Eagle Lube. We also carry a complete line of Penzoil synthetic motor oil. We understand your schedule may not permit you to spend an afternoon waiting for your vehicle to be serviced. At Eagle Lube, we strive to complete each premium service oil change in a timely manner, allowing you to spend time doing the things you enjoy. No appointment necessary. 
         </div>
     </div>
-    <div class="oilchange-bottom-content-container">
-        <div class="oilchange-bottomleft-content">
-            
+    <div class="services-bottom-content-container">
+        <div class="services-bottomleft-content">
+            <div><h2>Testimonials</h2></div>
+            <div>
+            <em>First time here... And I absolutely will be coming back! Such great, fast and friendly service! I came and asked for an oil change and I received much more than that. They checked all the truck's fluids and put what was needed, cleaned and checked my windshield wipers, checked and vacuumed my air filter and changed my oil quick. Even checked on a concern I had. There was no wait time at all and the price was great as well! Definently will be back!!</em> - Marie Villarreal
+            </div>
         </div>
-        <div class="oilchange-bottomright-content">
+        <div class="services-bottomright-content">
             <img src="/images/make-model-re.png" alt="make and models of vehicles" />
         </div>
     </div>
