--- a/pages/services/other-services.html
+++ b/pages/services/other-services.html
@@ -2,3 +2,28 @@
 title: EAGLE LUBE - Other Services
 layout: default
 ---
+
+<link rel="stylesheet" href="{{ site.github.url }}/css/services.css" type="text/css" />
+
+<div class="services-content">
+    <div class="services-top-content-container">
+        <div class="services-topleft-content">
+            <img src="/images/truckwash.jpg" alt="washing and detailing a truck and a boat" />
+        </div>
+        <div class="services-topright-content">
+            <h2>Other Services at Eagle Lube</h2>
+           At Eagle Lube, you're our first priority. Whether you need an oil change, car detailing, new tires, or if you want your windows tinted for the summer, our expert technicians will your perform the requested service efficiently, and get your car back to you quickly. We offer a full range of auto services at Eagle Lube. No appointment necessary.
+        </div>
+    </div>
+    <div class="services-bottom-content-container">
+        <div class="services-bottomleft-content">
+            <div><h2>Testimonials</h2></div>
+            <div>
+            <em>We dropped my husband's Silverado off for a wash and detail and they really outdid themselves. That truck looks brand new!! Keep up the great work guys!! I will never recommend any place else!!</em> - Shannon Simpson Rodriguez
+            </div>
+        </div>
+        <div class="services-bottomright-content">
+            <img src="/images/eagle-lube-bird.png" alt="Eagle Lube Bird" style="height: 10rem; width: 10rem;"/>
+        </div>
+    </div>
+</div>
