--- a/pages/services/state-vehicle-inspection.html
+++ b/pages/services/state-vehicle-inspection.html
@@ -2,3 +2,28 @@
 title: EAGLE LUBE - State Vehicle Inspection
 layout: default
 ---
+
+<link rel="stylesheet" href="{{ site.github.url }}/css/services.css" type="text/css" />
+
+<div class="services-content">
+    <div class="services-top-content-container">
+        <div class="services-topleft-content">
+            <img src="/images/workingontruck.jpg" alt="state inspection on commerical truck" />
+        </div>
+        <div class="services-topright-content">
+            <h2>Texas State Inspection at Eagle Lube</h2>
+           Texas requires all registered vehicles to be inspected annually. Inspections are performed to ensure the safety of all motorist. Texas has recently updated their protocol for state vehicle inspections. Motorist will no longer receive at state inspection sticker at the time of inspection, as your vehicle's inspection will be tied to your vehicle's registration. This is known as the Two Steps One Sticker initiative. Eagle Lube has a certified state inspector on location to promptly perform state inspection services. Eagle Lube can perform an annual state inspection for any passenger vehicle, motorcycle, or trailer. If you are a current resident or new to town, the Eagle can handle your annual state inspection.
+        </div>
+    </div>
+    <div class="services-bottom-content-container">
+        <div class="services-bottomleft-content">
+            <div><h2>Testimonials</h2></div>
+            <div>
+            <em>Love these guys!!!! Helped me out big today!!! Needed my oil changed and my baby was sleeping so they picked my car up for me and returned it!!! Such personal service!! Made my day!!!</em> - Brina Booker Esser
+            </div>
+        </div>
+        <div class="services-bottomright-content">
+            <img src="/images/texas-two-step-border.png" alt="Texas Two-Step Sticker" />
+        </div>
+    </div>
+</div>
