--- a/index.html
+++ b/index.html
@@ -28,3 +28,14 @@ layout: default
         <strong>Eagle Lube</strong> is Pleasanton's oil change and auto detailing expert! As a family owned and locally operated business, it is our goal to provide the best oil change & maintenance services in the Tri-city area. <a href="{{ site.github.url }}/pages/about-us/awards.html">Click here</a>        to find out about all of the awards we have won.
     </div>
 </div>
+
+<div class="content-region3">
+    <div class="content-region3-top">
+        <h1>Our <span style="color:#f4b742">Commitment</span></h1>
+        <h2>MAKING A DIFFERENCE,<br> MILE AFTER MILE.</h2>
+        Eagle Lube is a family owned and locally operated business with staff that has over 30 years of experience. We opened our first location in 2016 with a commitment to providing excellent customer care and professional automotive services. After only one
+        year, Eagle Lube has become Pleasanton's trusted oil change provider. Our Mission is to add value to our customers by making available a broad range of critical, cost-effective, hi-tech products and services that will make our company a house
+        hold name.
+        
+       
+</div>
