adjusted links to work correctly on git hub

--- a/pages/about-us/about-us.html
+++ b/pages/about-us/about-us.html
@@ -8,7 +8,7 @@ layout: default
 <div class="about-us-content">
     <div class="about-us-top-content-container">
         <div class="about-us-topleft-content">
-            <img src="/images/horiz-eagle-lube-store.jpg" alt="Picture of the store front with a sunset in the background." />
+            <img src="{{ site.github.url }}/images/horiz-eagle-lube-store.jpg" alt="Picture of the store front with a sunset in the background." />
         </div>
         <div class="about-us-topright-content">
             <div>
