--- a/pages/services/oil-change.html
+++ b/pages/services/oil-change.html
@@ -8,7 +8,7 @@ layout: default
 <div class="services-content">
     <div class="services-top-content-container">
         <div class="services-topleft-content">
-            <img src="/images/oilchange.jpg" alt="picture of a oil change" />
+            <img src="{{ site.github.url }}/images/oilchange.jpg" alt="picture of a oil change" />
         </div>
         <div class="services-topright-content">
             <h2>Oil Changes at Eagle Lube</h2>
@@ -23,7 +23,7 @@ layout: default
             </div>
         </div>
         <div class="services-bottomright-content">
-            <img src="/images/make-model-re.png" alt="make and models of vehicles" />
+            <img src="{{ site.github.url }}/images/make-model-re.png" alt="make and models of vehicles" />
         </div>
     </div>
 </div>
