--- a/pages/services/other-services.html
+++ b/pages/services/other-services.html
@@ -8,7 +8,7 @@ layout: default
 <div class="services-content">
     <div class="services-top-content-container">
         <div class="services-topleft-content">
-            <img src="/images/truckwash.jpg" alt="washing and detailing a truck and a boat" />
+            <img src="{{ site.github.url }}/images/truckwash.jpg" alt="washing and detailing a truck and a boat" />
         </div>
         <div class="services-topright-content">
             <h2>Other Services at Eagle Lube</h2>
@@ -23,7 +23,7 @@ layout: default
             </div>
         </div>
         <div class="services-bottomright-content">
-            <img src="/images/eagle-lube-bird.png" alt="Eagle Lube Bird" style="height: 10rem; width: 10rem;"/>
+            <img src="{{ site.github.url }}/images/eagle-lube-bird.png" alt="Eagle Lube Bird" style="height: 10rem; width: 10rem;"/>
         </div>
     </div>
 </div>
