--- a/pages/services/state-vehicle-inspection.html
+++ b/pages/services/state-vehicle-inspection.html
@@ -8,7 +8,7 @@ layout: default
 <div class="services-content">
     <div class="services-top-content-container">
         <div class="services-topleft-content">
-            <img src="/images/workingontruck.jpg" alt="state inspection on commerical truck" />
+            <img src="{{ site.github.url }}/images/workingontruck.jpg" alt="state inspection on commerical truck" />
         </div>
         <div class="services-topright-content">
             <h2>Texas State Inspection at Eagle Lube</h2>
@@ -23,7 +23,7 @@ layout: default
             </div>
         </div>
         <div class="services-bottomright-content">
-            <img src="/images/texas-two-step-border.png" alt="Texas Two-Step Sticker" />
+            <img src="{{ site.github.url }}/images/texas-two-step-border.png" alt="Texas Two-Step Sticker" />
         </div>
     </div>
 </div>
