--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@ layout: default
         Eagle Lube is a family owned and locally operated business with staff that has over 30 years of experience. We opened our first location in 2016 with a commitment to providing excellent customer care and professional automotive services. After only one
         year, Eagle Lube has become Pleasanton's trusted oil change provider. Our Mission is to add value to our customers by making available a broad range of critical, cost-effective, hi-tech products and services that will make our company a house
         hold name.
-        
+     </div>   
        
 </div>
